<resources>
    <string name="app_name">GradeCalculator</string>
    <string name="grade_calculator">Grade Calculator</string>
    <string name="ios">IOS</string>
    <string name="android">Android</string>
    <string name="swift">Swift</string>
    <string name="java">Java</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="avg">AVG</string>
    <string name="report">Report</string>
</resources>
