<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:stretchColumns="1"
    android:id="@+id/reportLayout"
    tools:context=".Report">

    <TableRow android:padding="5dip">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_span="3"
            android:gravity="center_horizontal"
            android:text="@string/report"
            android:textSize="40sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/firstRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/iosText"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:text="@string/ios"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/iosGrade"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="250dp"
            android:padding="5dp"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/secondRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/androidText"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/android"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/androidGrade"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/thirdRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/swiftText"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/swift"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/swiftGrade"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/FourthRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/javaText"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/java"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/javaGrade"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:textSize="20sp"/>
    </TableRow>

    <TableRow
        android:id="@+id/FifthRow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/maxMinAvg"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/maxMinAvgVal"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:padding="5dp"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_alignParentRight="true"/>
    </TableRow>



</TableLayout>